--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
-<p><img src="https://imgur.com/a/cesrVTW" alt="" /></p>
-</body>
+<object>
+ <embed src="Sunshine.swf" width="550" height="400"> </embed>
+</object>
 </html>
